cssMemSlider/styles.css
body{
    margin:0 auto;
    background: rgba(17, 17, 17, 0.904);
    max-width: 1920px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top:40px
}

.wrapper{
    width: 90%;
}

.slider{
    position: relative;
    width: 100%;
    overflow: hidden;
}


.slide{
    position: relative;
}

.slide{
    display: none;
}

.slides {
    width: 100%;
    height: calc(50vw - 20px);
}

.slide_display{
    border-radius: 12px;
    width: 100%;
    height: 100%;
    background: url('./assets/1.jpeg');
    background-repeat: no-repeat ;
    background-size: cover;
    background-position: center;
    animation-duration: 2s;
}

.slider_btns{
    display: flex;
    width: 10%;
    justify-content: space-between;
}

.content{
    display: flex;
    justify-content: space-between;
    margin-top: 30px;
    align-items: center;
}

.text{
    color: white;
    font-family: 'Roboto', sans-serif;
    font-size: 20px;
}


.button_wrapper{
    cursor: pointer;
    width: 22px;
    height: 22px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.slider_btn{
    width: 10px;
    height: 10px;
    background-color:rgb(0, 153, 255);
    border: 2px solid rgb(0, 153, 255);
    border-radius: 100%;
}

.slider_btn:hover{
    background-color:rgb(181, 225, 255);
    border-color: rgb(181, 225, 255);
}

.slider_btn:active{
    background-color: transparent;
}

.text{
    animation-duration: 2s;
    display: none;
    font-size: 24px;
}

@keyframes text {
    0% {opacity: 0; transform: scale(0);}
    100% {opacity: 1; transform: scale(1);}
}

@keyframes slide1 {
    0% {opacity: 0; transform: scale(0);}
    100% {opacity: 1; transform: scale(1);}
}
@keyframes slide2 {
    0% {opacity: 0; transform: scale(0);}
    100% {opacity: 1; transform: scale(1);}
}
@keyframes slide3 {
    0% {opacity: 0; transform: scale(0);}
    100% {opacity: 1; transform: scale(1);}
}
@keyframes slide4 {
    0% {opacity: 0; transform: scale(0);}
    100% {opacity: 1; transform: scale(1);}
}
@keyframes slide5 {
    0% {opacity: 0; transform: scale(0);}
    100% {opacity: 1; transform: scale(1);}
}

#slide1:checked ~ .slides .slide_display{
    animation-duration: 2s;
    animation-name:slide1;
    background: url('./assets/1.jpeg');
    background-repeat: no-repeat ;
    background-size: cover;
    background-position: center;
}

#slide1:checked ~ .content .content_text .text:nth-child(1){
    animation-name:slideranim;
    display: block;
}

#slide1:checked ~ .content .slider_btns .slider_btn:nth-child(1){
    background-color: transparent;
}

#slide2:checked ~ .slides .slide_display{
    animation-duration: 2s;
    animation-name: slide2;
    background: url('./assets/2.jpeg');
    background-repeat: no-repeat ;
    background-size: cover;
    background-position: center;
}

#slide2:checked ~ .content .content_text .text:nth-child(2){
    animation-name:text;
    display: block;
}

#slide2:checked ~ .content .slider_btns .slider_btn:nth-child(2){
    background-color: transparent;
}

#slide3:checked ~ .slides .slide_display{
    animation-duration: 2s;
    animation-name:slide3;
    background: url('./assets/3.jpg');
    background-repeat: no-repeat ;
    background-size: cover;
    background-position: center;
}

#slide3:checked ~ .content .content_text .text:nth-child(3){
    animation-name:text;
    display: block;
}

#slide3:checked ~ .content .slider_btns .slider_btn:nth-child(3){
    background-color: transparent;
}

#slide4:checked ~ .slides .slide_display{
    animation-duration: 2s;
    animation-name:slide4;
    animation-name: slide4;
    background: url('./assets/4.jpeg');
    background-repeat: no-repeat ;
    background-size: cover;
    background-position: center;  
}

#slide4:checked ~ .content .content_text .text:nth-child(4){
    animation-name:text;
    display: block;
}

#slide4:checked ~ .content .slider_btns .slider_btn:nth-child(4){
    background-color: transparent;
}

#slide5:checked ~ .slides .slide_display{
    animation-duration: 2s;
    animation-name:slide5;
    animation-name: slide5;
    background: url('./assets/5.jpg');
    background-repeat: no-repeat ;
    background-size: cover;
    background-position: center;   
}

#slide5:checked ~ .content .content_text .text:nth-child(5){
    animation-name:text;
    display: block;
}

#slide5:checked ~ .content .slider_btns .slider_btn:nth-child(5){
    background-color: transparent;
}

@media(max-width:800px)
{
    .content{
        flex-direction: column;
        align-items: center;
        margin-top: 10px;
        row-gap: 10px;
        height: 10vh;
    }

    .text{
        width: 100%;
        margin-bottom: 10px;
        order:2;
        font-size:14px;
    }

    .slider_btns{
        width: 40%;
    }
}

